# why

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  syntax.md  test.why
.github/workflows/: ci.yml
ideas/: loops.why  types.why
tests/: test_lexer.rs  test_lexer_vars.rs  vars.why
why-c/inc/: lexer.h  test.h  token.h  utils.h  why.h
why-c/src/: lexer.c  main.c  token.c  utils.c  why.c
why-rs/: Cargo.toml  main.rs
why-rs/lib/: ast.rs  errors.rs  internal.rs  lexer.rs  lib.rs  macros.rs  parser.rs  tokens.rs  utils.rs
why-rs/src/: main.rs
why-rs/src/lib/: lexer.rs  lib.rs  token.rs  utils.rs
why-rs/tests/: comments.why  data.why  equals.why  test_vars.rs
