[tool.poetry]
name = "why-py"
version = "0.1.0"
description = "Another programming language... Why?"
authors = ["Jonxslays"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
